Build: WIP adding pickles docs
Former-commit-id: cec8c8b5ab2244aa472381c595cd680abeef7892

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -189,7 +189,7 @@ jobs:
     - name: Generate pickles docs
       run: |
         choco install pickles
-        pickles -f features -o pickles --df html
+#        pickles -f features -o pickles --df html
     - uses: actions/upload-artifact@v2
       with:
         name: pickles-docs
