--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -189,7 +189,7 @@ jobs:
     - name: Install pickles
       run: choco install pickles
     - name: Generate Pickles docs
-      run:  pickles -f features -o pickles --df html
+      run:  pickles.exe -f features -o pickles --df html
     - uses: actions/upload-artifact@v2
       with:
         name: pickles-docs
