Build: WIP adding pickles docs
Former-commit-id: a8d9db41040e88a40119fb02718953fa62e21f5b

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -192,7 +192,7 @@ jobs:
       shell: cmd
       run:  |
           call refreshenv
-          pickles -f features -o pickles --df html
+          pickles -f features -o pickles --df html || VER>NUL
     - uses: actions/upload-artifact@v2
       with:
         name: pickles-docs
