build(release): use gem push instead of rake for release

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -284,7 +284,8 @@ jobs:
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${RUBYGEMS_API_KEY}\n" > $HOME/.gem/credentials
-          bundle exec rake release
+          bundle exec rake build
+          bundle exec gem push ./pkg/openhab-scripting-${{steps.current_version.outputs.version}}.gem
        env:
         RUBYGEMS_API_KEY: ${{secrets.RUBYGEMS_API_KEY}}
      - name: Create GitHub Release
