build(release): revert release dependency on cucumber
Former-commit-id: aa021f8a3233c5cb2b8fc1045d3229d177f45157

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -249,7 +249,7 @@ jobs:
 
  
  release:
-   #needs: cucumber 
+   needs: cucumber 
    if: github.ref == 'refs/heads/main' && !contains(github.event.head_commit.message, 'ci skip')
    runs-on: ubuntu-18.04
    steps:
