--- a/.releaserc.json
+++ b/.releaserc.json
@@ -7,7 +7,13 @@
     [
       "@semantic-release/commit-analyzer",
       {
-        "preset": "conventionalcommits"
+        "preset": "conventionalcommits",
+        "releaseRules": [
+          {
+            "type": "refactor",
+            "release": "patch"
+          }
+        ]
       }
     ],
     [
