build(release): fix to publish release notes
Former-commit-id: 503d169d23cf6cf5a8147563b9f61f26f9e382bc

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -278,6 +278,7 @@ jobs:
          npm install @semantic-release/git -D
          npm install semantic-release-rubygem -D
          npm install conventional-changelog-conventionalcommits -D
+         npm install @semantic-release/changelog -D
      - name: Release
        run: |
           npx semantic-release
