--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -64,7 +64,7 @@ jobs:
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
      - name: Cucumber Lint 
-       run: bundle exec cuke_linter
+       run: bundle exec cuke_linter features/
  
  yard-coverage:
    runs-on: ubuntu-18.04
