refactor(rubocop): removing all rubocop violations
Former-commit-id: 572e60abddb1268e7dddf3db26c8759364cf05a1

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -86,8 +86,8 @@ jobs:
           bundle install --jobs 4 --retry 3
      - name: Yard Coverage
        run: |
-            bundle exec yard stats --list-undoc
-            bundle exec yard stats | grep "100.00% documented"
+            bundle exec yard stats --list-undoc --private
+            bundle exec yard stats --private | grep "100.00% documented"
 
 
  openhab-setup:
